--- a/ecomsite/shop/templates/shop/index.html
+++ b/ecomsite/shop/templates/shop/index.html
@@ -1,19 +1,57 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" href="{% static 'shop/style.css' %}">
+    <script
+        src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+        crossorigin="anonymous"></script>
+    
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+        <link rel="stylesheet" href="{% static 'shop/style.css' %}">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
 
         <div class="row">
+            <div class="col-md-12">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="#">E-Commerce Tool</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                      <ul class="navbar-nav">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <button id="cart" data-html=true type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus
+                            sagittis lacus vel augue laoreet rutrum faucibus.">
+                            Cart(0)
+                            </button>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link disabled" href="#">Disabled</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </nav>
+            </div>
+        </div>
+
+        <div class="row m-5">
             <div class="col-md-12">
                 <form class="card card-sm">
                     <div class="card-body row no-gytters align-items-center">
@@ -27,13 +65,14 @@
                 </form>
             </div>
         </div>
-        <div class="row">
+
+        <div class="row m-5">
             {% for product in product_objects %}
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="card">
                     <img src="{{ product.image }}" class="card-img-top">
                     <div class="card-body">
-                        <div class="card-title">
+                        <div id = "nm{{product.id}}" class="card-title">
                             {{ product.title }}
                         </div>
                         <div class="card-text">
@@ -45,7 +84,8 @@
                         </div>
 
                         <a class="btn btn-success" href="/{{ product.id }}">View</a>
-                        <a class="btn btn-warning" href="">Add To Cart</a>
+                        <button id="{{ product.id }}" class="btn atc btn-warning" href="">Add to cart</button>
+
                     </div>
                 </div>
             </div>
@@ -53,7 +93,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-3 offset-md-5">
+            <div class="col-md-3 offset-md-4">
                 <ul class="pagination">
                     {% if product_objects.has_previous %}
                         <li class="page-item">
@@ -75,4 +115,44 @@
         </div>
     </div>
 </body>
+
+<script type="text/javascript">
+    console.log('This is working');
+    
+    if(localStorage.getItem('cart') == null){
+        var cart = {};
+    }
+    else{
+        cart = JSON.parse(localStorage.getItem('cart'));
+    }
+
+    $(document).on('click','.atc',function(){
+        var item_id = this.id.toString();
+
+        if(cart[item_id] != undefined){
+            cart[item_id] += 1
+        }
+        else cart[item_id] = 1;
+        localStorage.setItem('cart',JSON.stringify(cart));
+        document.getElementById("cart").innerHTML = "Cart(" + Object.keys(cart).length + ")";
+    });
+
+    DisplayCart(cart);
+    function DisplayCart(cart){
+        var cartString = "";
+        cartString += "<h5>This is your cart</h5>";
+        var cnt = 1;
+        for(var x in cart){
+            if(document.getElementById("nm"+x) == undefined) continue;
+            cartString += cnt;
+            cartString += document.getElementById("nm"+x).innerHTML + " Qty: " + cart[x] + "</br>";
+            cnt+=1;
+        }
+        cartString += "<a href='/checkout/'><button class='btn btn-warning' id='checkout'>Checkout</button></a>";
+        document.getElementById("cart").setAttribute('data-content',cartString);
+        $('[data-toggle="popover"]').popover();
+    }
+
+
+</script>
 </html>   
