--- a/ecomsite/shop/templates/shop/index.html
+++ b/ecomsite/shop/templates/shop/index.html
@@ -72,9 +72,7 @@
                 <div class="card">
                     <img src="{{ product.image }}" class="card-img-top">
                     <div class="card-body">
-                        <div id = "nm{{product.id}}" class="card-title">
-                            {{ product.title }}
-                        </div>
+                        <div id = "nm{{product.id}}" class="card-title">{{ product.title }}</div>
                         <div class="card-text">
                             ₹ {{ product.price }}
                         </div>
@@ -130,9 +128,12 @@
         var item_id = this.id.toString();
 
         if(cart[item_id] != undefined){
-            cart[item_id] += 1
+            cart[item_id][0] += 1;
         }
-        else cart[item_id] = 1;
+        else{
+            x = document.getElementById("nm" + item_id).innerHTML;
+            cart[item_id]=[1,x];
+        }
         localStorage.setItem('cart',JSON.stringify(cart));
         document.getElementById("cart").innerHTML = "Cart(" + Object.keys(cart).length + ")";
     });
@@ -145,7 +146,7 @@
         for(var x in cart){
             if(document.getElementById("nm"+x) == undefined) continue;
             cartString += cnt;
-            cartString += document.getElementById("nm"+x).innerHTML + " Qty: " + cart[x] + "</br>";
+            cartString += document.getElementById("nm"+x).innerHTML + " Qty: " + cart[x][0] + "</br>";
             cnt+=1;
         }
         cartString += "<a href='/checkout/'><button class='btn btn-warning' id='checkout'>Checkout</button></a>";
