Completed the Checkout page along with a few minor changes

--- a/ecomsite/shop/templates/shop/index.html
+++ b/ecomsite/shop/templates/shop/index.html
@@ -72,10 +72,8 @@
                 <div class="card">
                     <img src="{{ product.image }}" class="card-img-top">
                     <div class="card-body">
-                        <div id = "nm{{product.id}}" class="card-title">{{ product.title }}</div>
-                        <div class="card-text">
-                            ₹ {{ product.price }}
-                        </div>
+                        <div id="nm{{product.id}}" class="card-title">{{ product.title }}</div>
+                        <div id="price{{product.id}}" class="card-text">{{product.price}}</div>
                         <br>
                         <div class="card-text">
                             ₹ {{ product.discount_price }}
@@ -91,7 +89,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-3 offset-md-4">
+            <div class="col-md-3 offset-md-5">
                 <ul class="pagination">
                     {% if product_objects.has_previous %}
                         <li class="page-item">
@@ -129,10 +127,12 @@
 
         if(cart[item_id] != undefined){
             cart[item_id][0] += 1;
+            cart[item_id][2] += parseFloat(document.getElementById("price" + item_id).innerHTML);
         }
         else{
             x = document.getElementById("nm" + item_id).innerHTML;
-            cart[item_id]=[1,x];
+            y = parseFloat(document.getElementById("price" + item_id).innerHTML);
+            cart[item_id]=[1,x,y];
         }
         localStorage.setItem('cart',JSON.stringify(cart));
         document.getElementById("cart").innerHTML = "Cart(" + Object.keys(cart).length + ")";
