--- a/ecomsite/shop/templates/shop/checkout.html
+++ b/ecomsite/shop/templates/shop/checkout.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
     <title>Document</title>    
-
+    
 
 </head>
 <body>
@@ -16,9 +16,11 @@
 
         <div class="row">
             <div class="col-md-12">
+               
                 <ul id="item_list" class="list-group">
                     
                 </ul>
+
             </div>
         </div>
 
@@ -39,7 +41,7 @@
                     </div>
                     <div class="form-group">
                         <label for="inputAddress">Address</label>
-                        <input id="address" name="address" type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        <input id="address" name="address" type="text" class="form-control" id="inputAddress" placeholder="221B Baker Street">
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
@@ -51,8 +53,12 @@
                         <input id="state" name="state" type="text" class="form-control" id="inputCity">
                         </div>
                         <div class="form-group col-md-2">
-                        <label for="inputZip">Zip</label>
+                        <label for="inputZip">Zip Code</label>
                         <input id="zipcode" name="zeipcode" type="text" class="form-control" id="inputZip">
+                        </div>
+                        <div class="form-group col-md-2">
+                        <label for="inputZip">Amount to be paid: </label>
+                        <input readonly="" type="text" class="form-control" id="total" name="total">
                         </div>
                     </div>
         
@@ -70,13 +76,19 @@
     else{
         cart = JSON.parse(localStorage.getItem('cart'));
     }
+    let total = 0;
     for(item in cart){
         let name = cart[item][1];
         let quantity = cart[item][0];
+        let price = cart[item][2];
+        total += cart[item][2];
         
-        itemString = `<li class="list-group-item">${name}-${quantity}</li>`
+        itemString = `<li class="list-group-item"><span class="">${quantity}</span> of ${name} <span class="badge badge-warning badge-pill">${price}</span></li>`
         $('#item_list').append(itemString);
     }
+    totalPrice = `<li class="list-group-item d-flex justify-content-between align-items-center"><b>Your total: </b>${total}</li>`
+    $('#item_list').append(totalPrice);
     $('#items').val(JSON.stringify(cart));
+    $('#total').val(total);
 </script>
 </html>
